--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Document</title>
         <link rel="stylesheet" href="css/main.css">
+        <script src="js/script.js"></script>
     </head>
     <body>
 
-        <article class="site_menu">
+        <article id="menu" class="site_menu">
             <div class="container">
                 <img class="menu_logo" src="img/Airbnb_Logo_Bélo.png" alt="airbnb logo">
                 <nav class="menu_nav">
@@ -31,10 +32,10 @@
                 </article>
                 <article class="home_text">
                     <h3>
-                        We imagine a world where
-                        <span class="text-bold">you can belong anywhere</span>
+                        We imagine a world where <br/>
+                        <span class="text-bold">you can belong anywhere.</span>
                     </h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet atque earum enim maxime molestias neque nihil perferendis quasi, sunt tempora.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet atque earum enim maxime molestias neque nihil perferendis quasi, sunt tempora.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet atque earum enim maxime molestias neque nihil perferendis quasi, sunt tempora.</p>
                     <div>
                         <a href="#">
                             <img src="img/App%20store.png" alt="">
