--- a/index.html
+++ b/index.html
@@ -52,20 +52,20 @@
             <div class="container">
                 <h2>How it works</h2>
                 <article class="about_items">
-                    <div class="about about_item">
+                    <div class="about_item">
                         <img src="img/icon%20world.png" alt="icon with world">
                         <h3>Lorem ipsum</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab dolore nisi placeat?</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad consequuntur dolorem earum ex incidunt laboriosam magnam necessitatibus neque omnis placeat, sapiente sed!</p>
                     </div>
                     <div class="about about_item">
                         <img src="img/icon%20plane.png" alt="icon with world">
                         <h3>Lorem ipsum</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab dolore nisi placeat?</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae, consectetur delectus in magni nihil tempore tenetur! Aliquam natus nesciunt placeat quaerat recusandae.</p>
                     </div>
                     <div class="about about_item">
                         <img src="img/icon%20park.png" alt="icon with world">
                         <h3>Lorem ipsum</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab dolore nisi placeat?</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis consectetur facere magnam maxime, mollitia nisi obcaecati pariatur suscipit, temporibus tenetur, totam vitae!</p>
                     </div>
                 </article>
             </div>
