--- a/index.html
+++ b/index.html
@@ -74,16 +74,18 @@
         <section id="support" class="site_support">
             <div class="container">
                 <h2>Can we help you?</h2>
-                <article class="support_text">
-                    <h3>Watch it</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium at corporis exercitationem perferendis rerum!</p>
-                    <p>
-                        <span class="text-bold">Lorem ipsum.</span>Lorem ipsum.
-                    </p>
-                </article>
-                <article class="support_video">
-                    <img src="img/ipad.png"/>
-                </article>
+                <div class="support_wrapper">
+                    <article class="support_text">
+                        <h3>Watch it</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium at corporis exercitationem perferendis rerum!</p>
+                        <p>
+                            <span class="text-bold">Lorem ipsum.</span><br/>Lorem ipsum.
+                        </p>
+                    </article>
+                    <article class="support_video">
+                        <img src="img/ipad.png"/>
+                    </article>
+                </div>
             </div>
         </section>
 
@@ -110,7 +112,7 @@
             </div>
         </section>
 
-        <footer class="site site_footer">
+        <footer class="site_footer">
             <div class="container">
                 <p>Kamila Gadzinska 2017. All rights reserved</p>
             </div>
