--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
         <article id="menu" class="site_menu">
             <div class="container">
                 <img class="menu_logo" src="img/Airbnb_Logo_Bélo.png" alt="airbnb logo">
-                <nav class="menu_nav">
+                <div id="hamburger" class="hamburger_nav">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+                <nav id="nav" class="menu_nav nav-collapsed">
                     <ul>
                         <li><a href="#home">home</a></li>
                         <li><a href="#about">about</a></li>
@@ -32,7 +37,7 @@
                 </article>
                 <article class="home_text">
                     <h3>
-                        We imagine a world where <br/>
+                        We&nbsp;imagine a&nbsp;world where <br/>
                         <span class="text-bold">you can belong anywhere.</span>
                     </h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet atque earum enim maxime molestias neque nihil perferendis quasi, sunt tempora.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet atque earum enim maxime molestias neque nihil perferendis quasi, sunt tempora.</p>
