--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
         <section id="support" class="site_support">
             <div class="container">
                 <h2>Can we help you?</h2>
-                <div class="support_wrapper">
-                    <article class="support_text">
+                <div id='support_wrapper' class="support_wrapper">
+                    <article id="support_text" class="support_text">
                         <h3>Watch it</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium at corporis exercitationem perferendis rerum!</p>
-                        <p>
+                        <p id="support_text-moving">
                             <span class="text-bold">Lorem ipsum.</span><br/>Lorem ipsum.
                         </p>
                     </article>
@@ -98,21 +98,25 @@
             <div class="container">
                 <h2>Stay connected with Us</h2>
                 <article class="contact_social">
-                    <a class="social_icon" href="#">
-                        <img src="img/insta.png" alt="instagram logo">
-                    </a>
-                    <a class="social_icon" href="#">
-                        <img src="img/facebook.png" alt="facebook logo">
-                    </a>
-                    <a class="social_icon" href="#">
-                        <img src="img/pinterest.png" alt="pinterest logo">
-                    </a>
-                    <a class="social_icon" href="#">
-                        <img src="img/insta.png" alt="instagram logo">
-                    </a>
-                    <a class="social_icon" href="#">
-                        <img src="img/facebook.png" alt="facebook logo">
-                    </a>
+                    <div class="social_icons">
+                        <a class="social_icon" href="#">
+                            <img src="img/insta.png" alt="instagram logo">
+                        </a>
+                        <a class="social_icon" href="#">
+                            <img src="img/facebook.png" alt="facebook logo">
+                        </a>
+                    </div>
+                    <div class="social social_icons">
+                        <a class="social_icon" href="#">
+                            <img src="img/pinterest.png" alt="pinterest logo">
+                        </a>
+                        <a class="social_icon" href="#">
+                            <img src="img/insta.png" alt="instagram logo">
+                        </a>
+                        <a class="social_icon" href="#">
+                            <img src="img/facebook.png" alt="facebook logo">
+                        </a>
+                    </div>
                 </article>
             </div>
         </section>
